# qr-algorithm

./: .gitignore  CMakeLists.txt  README.md  generate.py  matrix.mtx  qr_algorithm.cpp
data/: a_4.mtx  a_5.mtx  a_500.mtx
log/: benchmark_2500.txt  benchmark_500.txt
scripts/: run.py
src/: main.cpp  math.hpp  qr_algorithm.cpp  qr_omp.hpp  qr_seq.hpp
